see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-June-2010 Jean-Marie Simonet
# [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Artyom and Phil.
$ Added missing string

03-June-2010 Jean-Marie Simonet
# [#20744] Logout link in administrator panel isn't logout when editing content. Thanks Andrew.
$ Missing strings
# [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Amy.
# [#20761] Unclear how to select contact for single contact menu item. Thanks Elin.
# [#20603] Error while trying to use PageBreak from frontend. Thanks Bill.

03-June-2010 Christophe Demko
 # Fixed issue [#20813] Value Not Found for blank user field (bill richardson, Peter Osipof)
 # Fixed issue [#20591] Cannot delete all usergroups from an access level (Robert Flodstrom)
 # Fixed issue [#20825] [patch] Debug plug-in doesn't output well formed code (Rouven Weßling)
 # Fixed issue [#20697] Uninstalling a component does not remove menu items of that component type
 # UI enhancement for com_menus
 # Fixed issue [#20805] Module linked to menu links (Aytug AKAR, Nikolai Plath, bill richardson)
 # Fixed issue [#20820] menu create - single contact typo error (bill richardson)
 # Fixed issue [#20789] featured contacts (bill richardson)
 # Fixed issue [#20819] Incorrect Label on Access Level Filter box on User Manager Access Level Screen (Ian McLennan)

02-June-2010 Jean-Marie Simonet
# [#20787] some misc html typos. Thanks Phil.
# [#20677] duplicate key error. Thanks Nicholas.
# [#20506] Field required: cache_handler - message in Global Config. Thanks Christophe and Klas