@@ -5,8 +5,8 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_CONTACTCREATOR_ERR_NO_CATEGORY="Contact automatic creation failed because contact category is not set!"
-PLG_CONTACTCREATOR_FIELD_AUTOMATIC_CONTACT_DESC="Optionally automatically creates a linked contact for each new user"
-PLG_CONTACTCREATOR_FIELD_AUTOMATIC_CONTACT_LABEL="Automatic Contact Creation"
+PLG_CONTACTCREATOR_FIELD_AUTOMATIC_WEBPAGE_DESC="A formatted string to automatically generate a contact's web page. [name] is replaced with the name, [username] is replaced with the username, [userid] is replaced with the user ID and [email] is replaced with the email"
+PLG_CONTACTCREATOR_FIELD_AUTOMATIC_WEBPAGE_LABEL="Automatic Webpage"
 PLG_CONTACTCREATOR_FIELD_AUTOPUBLISH_DESC="Optionally have the contact default to published or unpublished"
 PLG_CONTACTCREATOR_FIELD_AUTOPUBLISH_LABEL="Autopublish the contact"
 PLG_CONTACTCREATOR_FIELD_CATEGORY_DESC="Category to assign contacts to by default"
