@@ -22,9 +22,9 @@
 		<fields name="params">
 
 			<fieldset name="basic">
-				<field name="autowebpage" type="text"
-					description="PLG_CONTACTCREATOR_FIELD_AUTOMATIC_CONTACT_DESC"
-					label="PLG_CONTACTCREATOR_FIELD_AUTOMATIC_CONTACT_LABEL"
+				<field name="autowebpage" type="text" size="40"
+					description="PLG_CONTACTCREATOR_FIELD_AUTOMATIC_WEBPAGE_DESC"
+					label="PLG_CONTACTCREATOR_FIELD_AUTOMATIC_WEBPAGE_LABEL"
 				/>
 
 				<field name="category" type="category"
